Fix dark mode for slider

--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,10 @@
   --primary-hover: #3b5ce0;
   --secondary-color: #00d973;
   --secondary-hover: #00b85f;
-  --background-color: #121c2c;
-  --surface-color: #1e293b;
-  --text-primary: #f1f5f9;
-  --text-secondary: #cbd5e1;
+  --background-color: #0b121d;
+  --surface-color: #0b1425;
+  --text-primary: #fbfbfb;
+  --text-secondary: #eeeeee;
   --text-light: #94a3b8;
   --danger-color: #f87171;
   --success-color: #34d399;
